--- a/packages/api-reference/src/assets/tailwind.css
+++ b/packages/api-reference/src/assets/tailwind.css
@@ -1,76 +1,129 @@
-@import "tailwindcss/base" layer(scalar-base);
+@layer theme, base, components, utilities, scalar-base;
 
-.scalar-api-reference {
-  @tailwind components;
-  @tailwind utilities;
-  @tailwind variants;
+@import "tailwindcss" source(none);
 
-  /* TODO: This is not what we used as the default previously. */
-  /* line-height: 1.5; */
+@source "../";
+@source "../../../api-client";
+@source "../../../components";
 
-  color: var(--scalar-color-1);
+ @theme {
+  /* Border Radius */
+  --radius: var(--scalar-radius);
+  --radius-md: var(--scalar-radius);
+  --radius-lg: var(--scalar-radius-lg);
+  --radius-xl: var(--scalar-radius-xl);
+  --radius-px: 1px;
+  --radius-full: 9999px;
+  --radius-none: 0px;
 
-  /**
-   * Custom utilities to make life easier
-   * For some reason it was bugging on apply so I just used css for now
-   * Replicated in components until we figure out how to share
-   */
-  @layer components {
-    .row {
-      /* @apply flex flex-row; */
-      display: flex;
-      flex-direction: row;
-    }
-    .scalar-row {
-      /* @apply flex flex-row; */
-      display: flex;
-      flex-direction: row;
-    }
-    .row-1 {
-      /* @apply flex flex-1 flex-row; */
-      display: flex;
-      flex-direction: row;
-      flex: 1 1 0%;
-    }
-    .col {
-      /* @apply flex flex-col; */
-      display: flex;
-      flex-direction: column;
-    }
-    .col-1 {
-      /* @apply flex flex-1 flex-col; */
-      display: flex;
-      flex-direction: column;
-      flex: 1 1 0%;
-    }
-    .flex-center {
-      /* @apply flex items-center justify-center; */
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    .centered-x {
-      /* @apply left-1/2 -translate-x-1/2; */
-      left: 50%;
-      --tw-translate-x: -50%;
-      transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate))
-        skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-    }
-    .centered-y {
-      /* @apply top-1/2 -translate-y-1/2; */
-      top: 50%;
-      --tw-translate-y: -50%;
-      transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate))
-        skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-    }
-    .centered {
-      /* @apply centered-x centered-y; */
-      left: 50%;
-      --tw-translate-x: -50%;
-      top: 50%;
-      --tw-translate-y: -50%;
-      transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate))
-        skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-    }
-  }
+  /* Border Width */
+  --border-width: var(--scalar-border-width);
+  --border-width-0: 0;
+  --border-width-half: calc(var(--scalar-border-width) / 2);
+  --border-width-1: var(--scalar-border-width);
+  --border-width-2: calc(var(--scalar-border-width) * 2);
+  --border-width-4: calc(var(--scalar-border-width) * 4);
+
+  /* Box Shadow */
+  --shadow: var(--scalar-shadow-1);
+  --shadow-lg: var(--scalar-shadow-2);
+  --shadow-md: var(--scalar-shadow-1);
+  --shadow-sm: rgba(0, 0, 0, 0.09) 0px 1px 4px;
+  --shadow-none: 0 0 #0000;
+  --shadow-border: inset 0 0 0 1px var(--scalar-border-color);
+  --shadow-border-half: inset 0 0 0 .5px var(--scalar-border-color);
+
+  /* Font Family */
+  --font-sans: var(--scalar-font);
+  --font-code: var(--scalar-font-code);
+
+  /* Font Size */
+  --font-size-3xs: var(--scalar-font-size-7);
+  --font-size-xxs: var(--scalar-font-size-6);
+  --font-size-xs: var(--scalar-font-size-5);
+  --font-size-sm: var(--scalar-font-size-4);
+  --font-size-base: var(--scalar-font-size-3);
+  --font-size-lg: var(--scalar-font-size-2);
+  --font-size-xl: var(--scalar-font-size-1);
+
+  /* Font Weight */
+  --font-weight-normal: var(--scalar-regular);
+  --font-weight-medium: var(--scalar-semibold);
+  --font-weight-bold: var(--scalar-bold);
+
+  /* Background Colors */
+  --color-b-1: var(--scalar-background-1);
+  --color-b-1-5: color-mix(in srgb, var(--scalar-background-1), var(--scalar-background-2));
+  --color-b-2: var(--scalar-background-2);
+  --color-b-3: var(--scalar-background-3);
+  --color-b-4: var(--scalar-background-3);
+  --color-b-accent: var(--scalar-background-accent);
+  --color-b-btn: var(--scalar-button-1);
+  --color-b-danger: var(--scalar-background-danger);
+  --color-b-alert: var(--scalar-background-alert);
+
+
+  /* Foreground Colors */
+  --color-c-1: var(--scalar-color-1);
+  --color-c-2: var(--scalar-color-2);
+  --color-c-3: var(--scalar-color-3);
+  --color-c-accent: var(--scalar-color-accent);
+  --color-c-ghost: var(--scalar-color-ghost);
+  --color-c-disabled: var(--scalar-color-disabled);
+  --color-c-btn: var(--scalar-button-1-color);
+  --color-c-danger: var(--scalar-color-danger);
+  --color-c-alert: var(--scalar-color-alert);
+
+  /* Hover Colors */
+  --color-hover-btn: var(--scalar-button-1-hover);
+
+  /* Sidebar Colors */
+  --color-sidebar-b-1: var(--scalar-sidebar-background-1, var(--scalar-background-1));
+  --color-sidebar-c-1: var(--scalar-sidebar-color-1, var(--scalar-color-1));
+  --color-sidebar-c-2: var(--scalar-sidebar-color-2, var(--scalar-color-2));
+  --color-sidebar-border: var(--scalar-sidebar-border-color, var(--scalar-border-color));
+
+  /* Utility Colors */
+  --color-backdrop: rgba(0, 0, 0, 0.22);
+  --color-backdrop-dark: rgba(0, 0, 0, 0.45);
+  --color-border: var(--scalar-border-color);
+  --color-brand: var(--scalar-brand);
+
+  /* Themed Primary Colors */
+  --color-green: var(--scalar-color-green);
+  --color-red: var(--scalar-color-red);
+  --color-yellow: var(--scalar-color-yellow);
+  --color-blue: var(--scalar-color-blue);
+  --color-orange: var(--scalar-color-orange);
+  --color-purple: var(--scalar-color-purple);
+  --color-grey: var(--scalar-color-3);
+  --color-indigo: var(--scalar-color-blue);
+  --color-pink: var(--scalar-color-pink);
+
+  /* Line Height */
+  --line-height-none: 1;
+  --line-height-tight: 1.25;
+  --line-height-snug: 1.375;
+  --line-height-normal: 1.5;
+  --line-height-relaxed: 1.625;
+  --line-height-loose: 2;
+  --line-height-1: var(--scalar-line-height-1);
+  --line-height-2: var(--scalar-line-height-2);
+  --line-height-3: var(--scalar-line-height-3);
+  --line-height-4: var(--scalar-line-height-4);
+  --line-height-5: var(--scalar-line-height-5);
+
+  /* Spacing */
+  --spacing-px: 1px;
+  --spacing-header: 48px;
+  --spacing-border: var(--scalar-border-width);
+
+  /* Z-Index */
+  --z-index-negative: -1;
+  --z-index-0: 0;
+  --z-index-1: 1;
+
+  /* Brightness */
+  --brightness-lifted: var(--scalar-lifted-brightness);
+  --brightness-backdrop: var(--scalar-backdrop-brightness);
 }
