wip: update components to tailwind v4

--- a/packages/themes/src/base/reset.css
+++ b/packages/themes/src/base/reset.css
@@ -14,13 +14,6 @@
 
 /* Use :where to lower specificity */
 :where(.scalar-app) {
-  /** Add some more things which are normally applied to `html`. */
-  font-family: var(--scalar-font);
-  line-height: 1.15;
-  -webkit-text-size-adjust: 100%;
-  -moz-tab-size: 4;
-  tab-size: 4;
-
   *,
   *:before,
   *:after {
@@ -145,4 +138,13 @@
   [hidden] {
     display: none;
   }
+}
+
+/** Add some more things which are normally applied to `html`. */
+:where(.scalar-app) {
+  font-family: var(--scalar-font);
+  line-height: 1.15;
+  -webkit-text-size-adjust: 100%;
+  -moz-tab-size: 4;
+  tab-size: 4;
 }
