--- a/packages/themes/src/tailwind/theme.css
+++ b/packages/themes/src/tailwind/theme.css
@@ -1,7 +1,7 @@
-
 /** Scalar Tailwind Base Theme */
 @theme {
   /* Border Radius */
+  --radius-*: initial;
   --radius: var(--scalar-radius);
   --radius-md: var(--scalar-radius);
   --radius-lg: var(--scalar-radius-lg);
@@ -13,6 +13,7 @@
   --default-border-width: var(--scalar-border-width);
   
   /* Shadows */
+  --shadow-*: initial;
   --shadow: var(--scalar-shadow-1);
   --shadow-md: var(--scalar-shadow-1);
   --shadow-lg: var(--scalar-shadow-2);
@@ -20,6 +21,7 @@
   --shadow-border: inset 0 0 0 calc(var(--scalar-border-width) * 2) var(--scalar-border-color);
   
   /* Fonts */
+  --font-*: initial;
   --font-sans: var(--scalar-font);
   --font-code: var(--scalar-font-code);
   
@@ -34,13 +36,15 @@
   --text-xl: var(--scalar-font-size-1);
   
   /* Font Weights */
+  --font-weight-*: initial;
   --font-weight-normal: var(--scalar-regular);
   --font-weight-medium: var(--scalar-semibold);
   --font-weight-bold: var(--scalar-bold);
   
   /* Colors */
+  --color-*: initial;
 
-  /* Background Colors */
+  /* - Background Colors */
   --color-b-1: var(--scalar-background-1);
   --color-b-1\.5: color-mix(in srgb, var(--scalar-background-1), var(--scalar-background-2));
   --color-b-2: var(--scalar-background-2);
@@ -51,7 +55,7 @@
   --color-b-danger: var(--scalar-background-danger);
   --color-b-alert: var(--scalar-background-alert);
   
-  /* Foreground Colors */
+  /* - Foreground Colors */
   --color-c-1: var(--scalar-color-1);
   --color-c-2: var(--scalar-color-2);
   --color-c-3: var(--scalar-color-3);
@@ -63,22 +67,43 @@
   --color-c-danger: var(--scalar-color-danger);
   --color-c-alert: var(--scalar-color-alert);
   
-  /* Hover Colors */
+  /* - Hover Colors */
   --color-h-btn: var(--scalar-button-1-hover);
   
-  /* Sidebar Colors */
+  /* - Sidebar Colors */
   --color-sidebar-background-1: var(--scalar-sidebar-background-1, var(--scalar-background-1));
+  
   --color-sidebar-1: var(--scalar-sidebar-color-1, var(--scalar-color-1));
   --color-sidebar-2: var(--scalar-sidebar-color-2, var(--scalar-color-2));
-  --color-sidebar-border: var(--scalar-sidebar-border-color, var(--scalar-border-color));
   
-  /* Utility Colors */
+  --color-sidebar-hover-background: var(--scalar-sidebar-item-hover-background, var(--scalar-background-2));
+  --color-sidebar-hover: var(--scalar-sidebar-item-hover-color, currentColor);
+  
+  --color-sidebar-active-background: var(--scalar-sidebar-item-active-background, var(--scalar-background-2));
+  --color-sidebar-active: var(--scalar-sidebar-color-active, currentColor);
+  
+  --color-sidebar-border: var(--scalar-sidebar-border-color, var(--scalar-border-color));
+
+  --color-sidebar-indent-border: var(--scalar-sidebar-indent-border, var(--scalar-border-color));
+  --color-sidebar-indent-border-hover: var(--scalar-sidebar-indent-border-hover, var(--scalar-border-color));
+  --color-sidebar-indent-border-active: var(--scalar-sidebar-indent-border-active, var(--scalar-color-accent));
+  
+  
+  --color-sidebar-search-background: var(--scalar-sidebar-search-background, var(--scalar-background-2));
+  --color-sidebar-search: var(--scalar-sidebar-search-color, var(--scalar-color-3));
+  --color-sidebar-search-border: var(--scalar-sidebar-search-border-color, var(--scalar-border-color));
+  
+  /* - Utility Colors */
   --color-backdrop: rgba(0, 0, 0, 0.22);
   --color-backdrop-dark: rgba(0, 0, 0, 0.45);
   --color-border: var(--scalar-border-color);
   --color-brand: var(--scalar-brand);
-  
-  /* Themed Colors */
+
+  /* - Hardcoded Colors */
+  --color-white: #fff;
+  --color-black: #000;
+
+  /* - Themed Colors */
   --color-green: var(--scalar-color-green);
   --color-red: var(--scalar-color-red);
   --color-yellow: var(--scalar-color-yellow);
