--- a/packages/themes/src/tailwind/theme.css
+++ b/packages/themes/src/tailwind/theme.css
@@ -1,7 +1,7 @@
 /** Scalar Tailwind Base Theme */
 @theme {
   /* Border Radius */
-  --radius-*: initial;
+  --radius-\*: initial;
   --radius: var(--scalar-radius);
   --radius-md: var(--scalar-radius);
   --radius-lg: var(--scalar-radius-lg);
@@ -13,21 +13,20 @@
   --default-border-width: var(--scalar-border-width);
 
   /* Shadows */
-  --shadow-*: initial;
+  --shadow-\*: initial;
   --shadow: var(--scalar-shadow-1);
   --shadow-md: var(--scalar-shadow-1);
   --shadow-lg: var(--scalar-shadow-2);
   --shadow-sm: rgba(0, 0, 0, 0.09) 0px 1px 4px;
-  --shadow-border: inset 0 0 0 calc(var(--scalar-border-width) * 2)
-    var(--scalar-border-color);
+  --shadow-border: inset 0 0 0 calc(var(--scalar-border-width) * 2) var(--scalar-border-color);
 
   /* Fonts */
-  --font-*: initial;
+  --font-\*: initial;
   --font-sans: var(--scalar-font);
   --font-code: var(--scalar-font-code);
 
   /* Font Sizes */
-  --text-*: initial;
+  --text-\*: initial;
   --text-3xs: var(--scalar-font-size-7);
   --text-xxs: var(--scalar-font-size-6);
   --text-xs: var(--scalar-font-size-5);
@@ -37,21 +36,17 @@
   --text-xl: var(--scalar-font-size-1);
 
   /* Font Weights */
-  --font-weight-*: initial;
+  --font-weight-\*: initial;
   --font-weight-normal: var(--scalar-regular);
   --font-weight-medium: var(--scalar-semibold);
   --font-weight-bold: var(--scalar-bold);
 
   /* Colors */
-  --color-*: initial;
+  --color-\*: initial;
 
   /* - Background Colors */
   --color-b-1: var(--scalar-background-1);
-  --color-b-1\.5: color-mix(
-    in srgb,
-    var(--scalar-background-1),
-    var(--scalar-background-2)
-  );
+  --color-b-1\.5: color-mix(in srgb, var(--scalar-background-1), var(--scalar-background-2));
   --color-b-2: var(--scalar-background-2);
   --color-b-3: var(--scalar-background-3);
   --color-b-accent: var(--scalar-background-accent);
@@ -76,56 +71,26 @@
   --color-h-btn: var(--scalar-button-1-hover);
 
   /* - Sidebar Colors */
-  --color-sidebar-background-1: var(
-    --scalar-sidebar-background-1,
-    var(--scalar-background-1)
-  );
+  --color-sidebar-background-1: var(--scalar-sidebar-background-1, var(--scalar-background-1));
 
   --color-sidebar-1: var(--scalar-sidebar-color-1, var(--scalar-color-1));
   --color-sidebar-2: var(--scalar-sidebar-color-2, var(--scalar-color-2));
 
-  --color-sidebar-hover-background: var(
-    --scalar-sidebar-item-hover-background,
-    var(--scalar-background-2)
-  );
+  --color-sidebar-hover-background: var(--scalar-sidebar-item-hover-background, var(--scalar-background-2));
   --color-sidebar-hover: var(--scalar-sidebar-item-hover-color, currentColor);
 
-  --color-sidebar-active-background: var(
-    --scalar-sidebar-item-active-background,
-    var(--scalar-background-2)
-  );
+  --color-sidebar-active-background: var(--scalar-sidebar-item-active-background, var(--scalar-background-2));
   --color-sidebar-active: var(--scalar-sidebar-color-active, currentColor);
 
-  --color-sidebar-border: var(
-    --scalar-sidebar-border-color,
-    var(--scalar-border-color)
-  );
+  --color-sidebar-border: var(--scalar-sidebar-border-color, var(--scalar-border-color));
 
-  --color-sidebar-indent-border: var(
-    --scalar-sidebar-indent-border,
-    var(--scalar-border-color)
-  );
-  --color-sidebar-indent-border-hover: var(
-    --scalar-sidebar-indent-border-hover,
-    var(--scalar-border-color)
-  );
-  --color-sidebar-indent-border-active: var(
-    --scalar-sidebar-indent-border-active,
-    var(--scalar-color-accent)
-  );
+  --color-sidebar-indent-border: var(--scalar-sidebar-indent-border, var(--scalar-border-color));
+  --color-sidebar-indent-border-hover: var(--scalar-sidebar-indent-border-hover, var(--scalar-border-color));
+  --color-sidebar-indent-border-active: var(--scalar-sidebar-indent-border-active, var(--scalar-color-accent));
 
-  --color-sidebar-search-background: var(
-    --scalar-sidebar-search-background,
-    var(--scalar-background-2)
-  );
-  --color-sidebar-search: var(
-    --scalar-sidebar-search-color,
-    var(--scalar-color-3)
-  );
-  --color-sidebar-search-border: var(
-    --scalar-sidebar-search-border-color,
-    var(--scalar-border-color)
-  );
+  --color-sidebar-search-background: var(--scalar-sidebar-search-background, var(--scalar-background-2));
+  --color-sidebar-search: var(--scalar-sidebar-search-color, var(--scalar-color-3));
+  --color-sidebar-search-border: var(--scalar-sidebar-search-border-color, var(--scalar-border-color));
 
   /* - Utility Colors */
   --color-backdrop: rgba(0, 0, 0, 0.22);
@@ -173,7 +138,7 @@
   --breakpoint-lg: 1000px;
   --breakpoint-xl: 1200px;
 
-  /* Max Width */
+  /* Container Widths */
   --container-0: 0px;
   --container-xs: 320px;
   --container-sm: 384px;
@@ -190,4 +155,13 @@
   --container-min: min-content;
   --container-max: max-content;
   --container-fit: fit-content;
+
+  /* Z-Index */
+  --z-10: 10;
+  --z-20: 20;
+  --z-50: 50;
+  --z-context: 1000;
+  --z-context-plus: 1001;
+  --z-overlay: 10000;
+  --z-tooltip: 99999;
 }
