wip: migrate api client to tailwind v4

--- a/packages/api-client/src/tailwind.css
+++ b/packages/api-client/src/tailwind.css
@@ -7,17 +7,12 @@
 @import "@scalar/themes/tailwind/utilities.css";
 
 /* Utilities need to exist outside a layer */
-.scalar-app {
+.scalar-client {
   @import "tailwindcss/utilities.css";
 }
 
-/* Radix Popper */
-@utility max-w-radix-popper {
-  max-width: calc(var(--radix-popper-available-width) - 8px);
-}
-@utility max-h-radix-popper {
-  max-height: calc(var(--radix-popper-available-height) - 8px);
-}
+@source "./";
 
 /* Plugins */
 @plugin "@headlessui/tailwindcss";
+/* @plugin "./tailwind/desktop-variants.ts"; */
