--- a/packages/api-client/src/tailwind.css
+++ b/packages/api-client/src/tailwind.css
@@ -8,6 +8,9 @@
 
 /* Utilities need to exist outside a layer */
 .scalar-client {
+  line-height: 1.5;
+  color: var(--scalar-color-1);
+
   @import "tailwindcss/utilities.css";
 }
 
